k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: casgarage
  labels:
    app: casgarage
